[package]
name = "ova"
version = "0.1.0"
edition = "2021"
authors = ["pythops <contact@pythops.com>"]
description = "OpenVisionAPI client"
readme = "README.md"
homepage = "https://openvisionapi.com"
repository = "https://github.com/openvisionapi/ova"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "blocking",
  "multipart",
  "rustls-tls",
] }
clap = { version = "4", features = ["derive", "cargo"] }
serde = { version = "1", features = ["derive"] }
imageproc = "0.23"
image = "0.24"
serde_json = "1"
strum = { version = "0.25", features = ["derive"] }
anyhow = "1"
rand = "0.8"
rusttype = "0.9"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
pretty_assertions = "1"
